--- a/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Properties/Resources.resx
+++ b/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="water-cooler" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\water-cooler.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cpu1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cpu1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="giphy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\giphy.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -175,6 +178,9 @@
   <data name="tv" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user-icons" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-icons.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="sound-card" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sound-card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -190,7 +196,7 @@
   <data name="Başlıkcfrdhgdrghdrhdhsız-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Başlıkcfrdhgdrghdrhdhsız-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="user-icons" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user-icons.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="laptop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\laptop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
